--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -14,4 +14,115 @@
   font-weight: 600;
   font-size: 1rem;
   color: #212245;
+  margin-top: 2px;
+  margin-bottom: 0;
+}
+.menu a {
+  font-weight: 600;
+  font-size: 1rem;
+  color: #212245;
+  text-decoration: none;
+  transition: 0.3s;
+}
+.menu a:hover {
+  color: #df2020;
+}
+.active_menu {
+  color: #df2020 !important;
+}
+.cart_icon i,
+.user i,
+.mobile_menu i {
+  font-size: 1.3rem;
+  color: #212245;
+  cursor: pointer;
+  margin: 0.5rem;
+}
+.cart_icon {
+  position: relative;
+}
+.cart_badge {
+  position: absolute;
+  top: -6px;
+  right: 2.5rem;
+  color: #fff;
+  background-color: #df2020;
+  width: 15px;
+  height: 15px;
+  font-size: 0.8rem;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.mobile_menu {
+  font-weight: 600;
+  display: none;
+}
+.header_shrink {
+  position: sticky;
+  top: 0;
+  left: 0;
+  box-shadow: 5px 5px 15px -5px #fde4e4;
+}
+
+@media only screen and (max-width: 992px) {
+  .logo img {
+    width: calc(100%-70%);
+  }
+  .logo h5 {
+    font-style: 0.9rem;
+    margin-top: -2px;
+  }
+  .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.534);
+    z-index: 99;
+    display: none;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #fff;
+    width: 250px;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    line-height: 20px;
+  }
+  .menu a {
+    font-style: 0.9rem;
+  }
+  .mobile_menu {
+    display: inline;
+  }
+  .cart_icon i,
+  .user i,
+  .mobile_menu i {
+    font-style: 1rem;
+    margin: 0.5rem;
+  }
+  .cart_badge {
+    position: absolute;
+    top: -6px;
+    right: 4.8rem;
+  }
+  .show_menu {
+    display: block;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .header {
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+  }
 }
