--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 80px;
+  height: 100px;
   line-height: 80px;
 }
 .logo {
@@ -9,12 +9,13 @@
 .logo img {
   width: calc(100%-60%);
   object-fit: contain;
+  margin-top: -10px;
 }
 .logo h5 {
   font-weight: 600;
   font-size: 1rem;
   color: #212245;
-  margin-top: 2px;
+  margin-top: -20px;
   margin-bottom: 0;
 }
 .menu a {
@@ -64,6 +65,8 @@
   position: sticky;
   top: 0;
   left: 0;
+  background: #fff;
+  z-index: 99999;
   box-shadow: 5px 5px 15px -5px #fde4e4;
 }
 
@@ -122,7 +125,13 @@
 @media only screen and (max-width: 768px) {
   .header {
     width: 100%;
-    height: 50px;
+    height: 100px;
     line-height: 50px;
+  }
+  .logo img {
+    margin-top: -20px !important;
+  }
+  .logo h5 {
+    margin-top: -20px;
   }
 }
